# fast-api-sql-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: application.py  config.py  initial_data.py  main.py
app/alembic/: env.py
app/alembic/versions/: 434bc58109ac_0_migrate.py
app/api/api_v1/: api.py
app/api/endpoints/: websocket.py  websocket_manager.py
app/api/schemas/: user.py
app/api/utils/: security.py
app/application/auth/: __init__.py  factory.py  ports.py
app/application/users/: __init__.py  ports.py  use_cases.py
app/core/: config.py  jwt.py  return_messages.py
app/crud/: environment.py  group.py  permission.py  user.py
app/db/: base.py  base_class.py  init_db.py
app/db_models/: models.py
app/domain/: __init__.py
app/domain/auth/: __init__.py  entities.py
app/domain/events/: __init__.py  entities.py
app/domain/users/: __init__.py  entities.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: redis_client.py
app/infrastructure/events/: kafka_consumer.py  kafka_producer.py
app/infrastructure/persistence/: __init__.py  database.py
app/middleware/: __init__.py  auth.py  db_exceptions.py  validation.py
app/middlewares/: db_exceptions.py  db_middleware.py  validation_middleware.py
app/models/: base.py  database.py  environment.py  group.py  permission.py  token.py  user.py
app/tasks/: __init__.py  example.py
app/tests/: conftest.py
app/tests/mocks/: __init__.py  oauth2_provider.py
app/tests/models/: test_environment.py  (+3 more)
(+22 files in other folders)
