[project]
name = "fast-api-app"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlalchemy-utils>=0.41.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "dramatiq[redis]>=1.0.0",
    "aiokafka>=0.12.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.4.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "tenacity>=9.0.0",
    "gunicorn>=23.0.0",
    "pyjwt>=2.12.1",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "vulture>=2.0.0",
]
